--- a/next_matches.ipynb
+++ b/next_matches.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,15 +65,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3/3 [00:00<00:00,  3.31it/s]\n",
-      "100%|██████████| 3/3 [00:02<00:00,  1.32it/s]\n"
+      "100%|██████████| 3/3 [00:06<00:00,  2.16s/it]\n",
+      "100%|██████████| 3/3 [00:14<00:00,  4.71s/it]\n"
      ]
     }
    ],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -282,163 +282,163 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>4</td>\n",
-       "      <td>11</td>\n",
+       "      <td>8</td>\n",
+       "      <td>16</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>-0.4</td>\n",
-       "      <td>-3.8</td>\n",
-       "      <td>-0.4</td>\n",
-       "      <td>-0.2</td>\n",
-       "      <td>-0.2</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-3.2</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>-3.0</td>\n",
        "      <td>-1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-9.0</td>\n",
+       "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>8</td>\n",
-       "      <td>14</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.2</td>\n",
-       "      <td>5.4</td>\n",
+       "      <td>12</td>\n",
+       "      <td>17</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.6</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>6.8</td>\n",
+       "      <td>-1.4</td>\n",
+       "      <td>-0.6</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>12</td>\n",
-       "      <td>18</td>\n",
+       "      <td>25</td>\n",
+       "      <td>9</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>6.2</td>\n",
-       "      <td>0.8</td>\n",
+       "      <td>-0.6</td>\n",
+       "      <td>-6.8</td>\n",
+       "      <td>-2.6</td>\n",
        "      <td>0.2</td>\n",
        "      <td>0.2</td>\n",
-       "      <td>6.2</td>\n",
-       "      <td>-5.6</td>\n",
-       "      <td>-1.2</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>8.0</td>\n",
+       "      <td>-4.0</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>-11.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>9</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>-0.2</td>\n",
-       "      <td>-0.2</td>\n",
+       "      <td>18</td>\n",
+       "      <td>11</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>-1.6</td>\n",
+       "      <td>-2.8</td>\n",
        "      <td>-1.2</td>\n",
-       "      <td>5.2</td>\n",
-       "      <td>0.8</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>0.6</td>\n",
-       "      <td>11.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>10</td>\n",
        "      <td>28</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.8</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>-5.8</td>\n",
-       "      <td>-0.6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>-0.4</td>\n",
+       "      <td>-3.2</td>\n",
+       "      <td>-2.2</td>\n",
        "      <td>-0.2</td>\n",
-       "      <td>12.0</td>\n",
+       "      <td>-0.4</td>\n",
+       "      <td>-6.2</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-0.8</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-11.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>25</td>\n",
        "      <td>22</td>\n",
+       "      <td>19</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>-2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>-0.8</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>-1.6</td>\n",
        "      <td>0.2</td>\n",
-       "      <td>-5.4</td>\n",
-       "      <td>-0.2</td>\n",
        "      <td>0.4</td>\n",
+       "      <td>-10.6</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>-1.6</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>-12.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>-1.8</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-10.2</td>\n",
-       "      <td>-1.4</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>-0.2</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>17</td>\n",
+       "      <td>10</td>\n",
        "      <td>27</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-1.2</td>\n",
-       "      <td>-0.4</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>-0.2</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-4.2</td>\n",
-       "      <td>-3.4</td>\n",
-       "      <td>-0.6</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>11.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>16</td>\n",
-       "      <td>26</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>1.4</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-5.4</td>\n",
-       "      <td>-1.6</td>\n",
        "      <td>0.4</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>-2.2</td>\n",
+       "      <td>-0.4</td>\n",
+       "      <td>-0.2</td>\n",
        "      <td>12.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>24</td>\n",
-       "      <td>19</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>-2.0</td>\n",
-       "      <td>-3.2</td>\n",
-       "      <td>-1.2</td>\n",
+       "      <th>7</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.6</td>\n",
-       "      <td>5.4</td>\n",
+       "      <td>-0.4</td>\n",
+       "      <td>2.4</td>\n",
        "      <td>1.2</td>\n",
+       "      <td>-0.2</td>\n",
+       "      <td>-0.2</td>\n",
+       "      <td>-1.8</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-5.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.2</td>\n",
+       "      <td>-7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>24</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-0.2</td>\n",
+       "      <td>-0.6</td>\n",
+       "      <td>-0.4</td>\n",
+       "      <td>-0.4</td>\n",
+       "      <td>-0.4</td>\n",
+       "      <td>-0.4</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>-7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>26</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>-0.2</td>\n",
+       "      <td>-0.2</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>-0.6</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>-12.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -446,43 +446,43 @@
       ],
       "text/plain": [
        "  home away  prediction  goals  total_shots  shots_on_target  \\\n",
-       "0    4   11         1.0   -0.4         -3.8             -0.4   \n",
-       "1    8   14         1.0    0.4          3.4              0.2   \n",
-       "2   12   18         2.0    0.4          6.2              0.8   \n",
-       "3    9    1         1.0    0.2          1.2             -0.2   \n",
-       "4   10   28         1.0    1.0          2.8              3.2   \n",
-       "5   25   22         1.0    0.4         -2.0              0.0   \n",
-       "6    0    5         1.0    0.8         -1.8              0.4   \n",
-       "7   17   27         0.0   -1.2         -0.4              0.4   \n",
-       "8   16   26         1.0    0.2          1.4              2.0   \n",
-       "9   24   19         2.0   -2.0         -3.2             -1.2   \n",
+       "0    8   16         1.0    1.4          6.2              1.0   \n",
+       "1   12   17         0.0    0.6          3.8              2.2   \n",
+       "2   25    9         2.0   -0.6         -6.8             -2.6   \n",
+       "3   18   11         0.0   -1.6         -2.8             -1.2   \n",
+       "4   28    5         2.0   -0.4         -3.2             -2.2   \n",
+       "5   22   19         1.0   -0.8          1.6             -1.6   \n",
+       "6   10   27         1.0    2.0          0.4              1.8   \n",
+       "7    4    0         0.0   -0.4          2.4              1.2   \n",
+       "8   24   14         1.0   -0.2         -0.6             -0.4   \n",
+       "9   26    1         0.0    0.4          2.0              2.0   \n",
        "\n",
        "   goals_on_penalty  total_penalties  percentage_possession  fouls  \\\n",
-       "0              -0.2             -0.2                    0.0   -3.2   \n",
-       "1               0.0             -0.2                    5.4    0.0   \n",
-       "2               0.2              0.2                    6.2   -5.6   \n",
-       "3              -0.2              0.0                   -1.2    5.2   \n",
-       "4               0.0              0.0                    6.0   -5.8   \n",
-       "5               0.0              0.2                   -5.4   -0.2   \n",
-       "6               0.4              0.0                  -10.2   -1.4   \n",
-       "7              -0.2              0.0                   -4.2   -3.4   \n",
-       "8               0.0              0.0                   -5.4   -1.6   \n",
-       "9               0.0              0.0                    3.6    5.4   \n",
+       "0               0.2              0.2                    2.2   -3.0   \n",
+       "1               0.2              0.2                    6.8   -1.4   \n",
+       "2               0.2              0.2                   -4.0    1.2   \n",
+       "3               0.0              0.0                    4.0    2.0   \n",
+       "4              -0.2             -0.4                   -6.2   -1.0   \n",
+       "5               0.2              0.4                  -10.6    3.2   \n",
+       "6               0.2              0.4                    4.8   -2.2   \n",
+       "7              -0.2             -0.2                   -1.8    0.0   \n",
+       "8              -0.4             -0.4                   -0.4    0.8   \n",
+       "9              -0.2             -0.2                    0.8    1.6   \n",
        "\n",
        "   yellow_cards  red_cards  rank  \n",
-       "0          -1.0        0.0  -9.0  \n",
-       "1           0.6        0.0   2.0  \n",
-       "2          -1.2        0.0   8.0  \n",
-       "3           0.8        0.6  11.0  \n",
-       "4          -0.6       -0.2  12.0  \n",
-       "5           0.4        0.0   2.0  \n",
-       "6           0.4       -0.2   1.0  \n",
-       "7          -0.6        0.0  11.0  \n",
-       "8           0.4        0.0  12.0  \n",
-       "9           1.2        0.0  -5.0  "
+       "0          -1.0        0.0   5.0  \n",
+       "1          -0.6        0.0   4.0  \n",
+       "2           1.6        0.2 -11.0  \n",
+       "3           0.6        0.0  -3.0  \n",
+       "4          -0.8        0.0 -11.0  \n",
+       "5          -1.6        0.0 -12.0  \n",
+       "6          -0.4       -0.2  12.0  \n",
+       "7           0.0       -0.2  -7.0  \n",
+       "8           1.0        0.2  -7.0  \n",
+       "9          -0.6        0.2 -12.0  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -537,63 +537,63 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>empoli</td>\n",
-       "      <td>milan</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>inter</td>\n",
+       "      <td>sampdoria</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>inter</td>\n",
-       "      <td>roma</td>\n",
+       "      <td>napoli</td>\n",
+       "      <td>sassuolo</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>napoli</td>\n",
-       "      <td>torino</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>lecce</td>\n",
+       "      <td>juventus</td>\n",
+       "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>juventus</td>\n",
-       "      <td>bologna</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>torino</td>\n",
+       "      <td>milan</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>lazio</td>\n",
        "      <td>spezia</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>fiorentina</td>\n",
+       "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>lecce</td>\n",
        "      <td>cremonese</td>\n",
+       "      <td>udinese</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>atalanta</td>\n",
-       "      <td>fiorentina</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>sassuolo</td>\n",
+       "      <td>lazio</td>\n",
        "      <td>salernitana</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>empoli</td>\n",
+       "      <td>atalanta</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>sampdoria</td>\n",
-       "      <td>monza</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>hellas verona</td>\n",
+       "      <td>roma</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>hellas verona</td>\n",
-       "      <td>udinese</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>monza</td>\n",
+       "      <td>bologna</td>\n",
+       "      <td>2.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -601,19 +601,19 @@
       ],
       "text/plain": [
        "            home         away  prediction\n",
-       "0         empoli        milan         2.0\n",
-       "1          inter         roma         1.0\n",
-       "2         napoli       torino         1.0\n",
-       "3       juventus      bologna         1.0\n",
-       "4          lazio       spezia         1.0\n",
-       "5          lecce    cremonese         1.0\n",
-       "6       atalanta   fiorentina         1.0\n",
-       "7       sassuolo  salernitana         1.0\n",
-       "8      sampdoria        monza         1.0\n",
-       "9  hellas verona      udinese         1.0"
+       "0          inter    sampdoria         1.0\n",
+       "1         napoli     sassuolo         1.0\n",
+       "2          lecce     juventus         2.0\n",
+       "3         torino        milan         0.0\n",
+       "4         spezia   fiorentina         2.0\n",
+       "5      cremonese      udinese         1.0\n",
+       "6          lazio  salernitana         1.0\n",
+       "7         empoli     atalanta         2.0\n",
+       "8  hellas verona         roma         0.0\n",
+       "9          monza      bologna         2.0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
